# composition

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  asn1der.txt  build.rs  composition.toml  docker-bake.hcl  docker-compose.yml  log.txt
.gitea/workflows/: ci.yml  clippy.yml
.github/workflows/: clippy.yml
crates/composition-core/: Cargo.toml  build.rs
crates/composition-core/src/: config.rs  error.rs  lib.rs  main.rs  net.rs
crates/composition-core/src/net/: client.rs  mod.rs  packets.rs  server.rs
crates/composition-core/src/net/mctypes/: other.rs
crates/composition-core/src/server/: messages.rs  mod.rs
crates/composition-core/src/world/: chunks.rs  mod.rs
crates/composition-core/src/world/generators/: mod.rs  superflat.rs
crates/composition-parsing/: Cargo.toml
crates/composition-parsing/src/: error.rs  lib.rs  parsable.rs
crates/composition-protocol/: Cargo.toml
crates/composition-protocol/examples/: proxy.rs
crates/composition-protocol/examples/packet_logger/: Cargo.toml
crates/composition-protocol/examples/packet_logger/src/: main.rs
crates/composition-protocol/src/: error.rs  lib.rs  mctypes.rs  util.rs
crates/composition-protocol/src/blocks/: mod.rs
crates/composition-protocol/src/entities/: cat.rs  frog.rs  metadata.rs  mod.rs  particle.rs  player.rs  sniffer.rs  villager.rs
crates/composition-protocol/src/packet/: mod.rs
crates/composition-protocol/src/packet/clientbound/: login.rs  play.rs  status.rs
crates/composition-protocol/src/packet/serverbound/: handshake.rs  login.rs  mod.rs  play.rs  status.rs
crates/composition-protocol/src/packets/: mod.rs
crates/composition-protocol/src/packets/clientbound/: login.rs  mod.rs  play.rs  status.rs
crates/composition-protocol/src/packets/codec/: mod.rs  uncompressed.rs
crates/composition-protocol/src/packets/serverbound/: handshake.rs  login.rs  mod.rs  play.rs  status.rs
crates/composition-world/: Cargo.toml
crates/composition-world/src/: chunks.rs  lib.rs
crates/composition-world/src/generators/: mod.rs  superflat.rs
src/: config.rs  lib.rs  logger.rs  main.rs  mctypes.rs  net.rs  old_net.rs  protocol.rs  server.rs
src/entity/: player.rs
src/mctypes/: functions.rs  mod.rs  numbers.rs  other.rs
src/net/: codec.rs  connection.rs  error.rs  listener.rs  mod.rs  packets.rs
src/net/connection/: mod.rs  upstream.rs
src/net/connection/downstream/: manager.rs  mod.rs
src/net/mctypes/: numbers.rs  other.rs
src/net/packets/: clientbound.rs  serverbound.rs
src/network/: mod.rs
src/network/packet/: mod.rs
src/protocol/: encryption.rs  error.rs  mctypes.rs  mod.rs  packets.rs  parsing.rs  types.rs
src/protocol/entities/: cat.rs  metadata.rs  mod.rs  particle.rs  player.rs  sniffer.rs  villager.rs
src/protocol/inventory/: mod.rs  slot.rs
src/protocol/packets/: mod.rs
src/protocol/packets/clientbound/: login.rs  play.rs  status.rs
src/protocol/packets/serverbound/: handshake.rs  login.rs  play.rs  status.rs
src/protocol/parsing/: error.rs  mod.rs  parsable.rs
src/proxy/: config.rs  error.rs  mod.rs
src/server/: config.rs  error.rs  messages.rs  mod.rs  net.rs
src/server/net/: mod.rs
src/server/net/packets/: clientbound.rs  mod.rs  serverbound.rs
src/server/packets/: clientbound.rs  mod.rs  serverbound.rs
src/world/: chunks.rs  error.rs  location.rs  mod.rs
src/world/generators/: mod.rs
