[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Garen Tyler <garentyler@garen.dev>"]
repository = "https://github.com/garentyler/composition"
readme = "README.md"
license = "MIT"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.71"
apecs = "0.8.4"
async-trait = "0.1.68"
byteorder = "1.4.3"
composition-core.path = "./crates/composition-core"
composition-parsing.path = "./crates/composition-parsing"
composition-protocol.path = "./crates/composition-protocol"
composition-world.path = "./crates/composition-world"
serde = { version = "1.0.160", features = ["serde_derive"] }
serde_json = "1.0.96"
thiserror = "2.0.3"
tokio = { version = "1.28.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["log"] }

# Unused but possibly useful dependencies:
# async-trait = "0.1.48"
# backtrace = "0.3.50"
# colorful = "0.2.1"
# ctrlc = "3.1.8"
# fastnbt = "*"
# futures = "0.3.28"
# mojang-api = "0.6.1"
# ozelot = "0.9.0" # Ozelot 0.9.0 supports protocol version 578 (1.15.2)
# quartz_nbt = { version = "0.2.6", features = ["serde"] }
# radix64 = "0.6.2"
# toml = "0.5.6"
# uuid = "0.8.2"
