[package]
name = "composition"
description = "An extremely fast Minecraft server & proxy"
build = "build.rs"
version = "0.1.0"
authors = ["Garen Tyler <garentyler@garen.dev>"]
repository = "https://github.com/garentyler/composition"
readme = "README.md"
license = "MIT"
edition = "2021"

[[bin]]
name = "composition"
path = "src/main.rs"

[features]
default = ["server", "proxy"]
server = ["world", "dep:tokio-util", "dep:base64"]
proxy = ["dep:tokio-util"]
world = ["dep:async-trait"]
update_1_20 = []

[dependencies]
async-trait = { version = "0.1.68", optional = true }
base64 = { version = "0.22.1", optional = true }
clap = { version = "4.5.23", features = ["derive"] }
const_format = "0.2.34"
futures = "0.3.31"
nom = "7.1.3"
once_cell = "1.17.1"
serde = { version = "1.0.160", features = ["serde_derive"] }
serde_json = "1.0.96"
thiserror = "2.0.5"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"], optional = true }
toml = "0.8.19"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["tracing-log"] }
tracing-appender = "0.2.2"
uuid = { version = "1.13.1", features = ["v4"] }
