[package]
name = "composition-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = "0.4.13"
ctrlc = "3.1.8"
fern = { version = "0.6", features = ["colored"] }
lazy_static = "1.4.0"
log = "0.4"
quartz_nbt = { version = "0.2.6", features = ["serde"] }
radix64 = "0.6.2"
serde = { version = "1.0.114", features = ["serde_derive"] }
serde_json = "1.0.59"
substring = "1.4.5"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
uuid = "0.8.2"

# async-trait = "0.1.48"
# backtrace = "0.3.50"
# base64 = "0.12.3"
# colorful = "0.2.1"
# composition-protocol = { path = "../composition-protocol" }
# fastnbt = "*"
# futures = "0.3.13"
# mojang-api = "0.6.1"
# ozelot = "0.9.0" # Ozelot 0.9.0 supports protocol version 578 (1.15.2)
# toml = "0.5.6"
