[package]
name = "composition-parsing"
description = "Useful shared parsing functions"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
byteorder.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
