[package]
name = "composition-protocol"
description = "The Minecraft protocol implemented in a network-agnostic way"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
update_1_20 = []

[dependencies]
anyhow.workspace = true
byteorder.workspace = true
composition-parsing.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
