[package]
name = "composition-protocol"
description = "The Minecraft protocol implemented in a network-agnostic way"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["codec"]
codec = ["dep:tokio-util", "dep:tokio"]
tracing = ["dep:tracing"]
update_1_20 = []

[dependencies]
anyhow.workspace = true
byteorder.workspace = true
bytes.workspace = true
composition-parsing.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true, features = ["rt", "io-util"] }
tokio-util = { workspace = true, optional = true, features = ["codec"] }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "net", "macros"] }

[[example]]
name = "proxy"
crate-type = ["bin"]
