[package]
name = "composition-world"
description = "A Minecraft world generator implementation that allows for custom worlds"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
composition-protocol.workspace = true
thiserror.workspace = true
